--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,6 +15,7 @@
         <h1>Hello, World!</h1>
         <button id="ping" class="btn btn-default btn-md">Ping</button><br/>
         <button id="personList" class="btn btn-default btn-md">Persons List</button><br><br>
+        <button id="docTypesList" class="btn btn-default btn-md">Doc Types List</button><br><br>
         Name: <input type="text" id="name"><br>
         Age: <input type="text" id="age"><br>
         <button id="addPerson" class="btn btn-default btn-md">Save</button><br>
